force-app/main/default/objects/ER_Contact_Role__c/fields/ER_Email__c.field-meta.xml
<CustomField>
    <fullName>ER_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>