force-app/main/default/objects/ER_Contact_Role__c/fields/ER_Financial_Center__c.field-meta.xml
<CustomField>
    <fullName>ER_Financial_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Center</label>
    <referenceTo>ER_Financial_Center__c</referenceTo>
    <relationshipLabel>Contact Roles</relationshipLabel>
    <relationshipName>Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>