force-app/main/default/objects/ER_Contact_Role__c/fields/ER_Role__c.field-meta.xml
<CustomField>
    <fullName>ER_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Reimbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>